--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,8 +111,7 @@ select = [
 ignore = [
     "E501",  # pycodestyle: line-too-long
     "PIE808",  # unnecessary-range-start
-    "RUF012",  # mutable-class-default - see https://github.com/astral-sh/ruff/issues/5243
-]
+    "RUF012",  # mutable-class-default - see
 
 [tool.ruff.lint.isort]
 combine-as-imports = true
