--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,7 +111,7 @@ select = [
 ignore = [
     "E501",  # pycodestyle: line-too-long
     "PIE808",  # unnecessary-range-start
-    "RUF012",  # mutable-class-default - see
+    "RUF012",  # mutable-class-default
 
 [tool.ruff.lint.isort]
 combine-as-imports = true
