--- a/pyproject.toml
+++ b/pyproject.toml
@@ -98,12 +98,17 @@ exclude = '''
 '''
 
 [tool.ruff.lint]
-
-ignore = [
-    "E501",  # pycodestyle: line-too-long
-    "PIE808",  # unnecessary-range-start
-    "RUF012",  # mutable-class-default
+select = [
+    "DJ",  # flake8-django
+    "E",  # pycodestyle
+    "F",  # pyflakes
+    "I",  # isort
+    "PIE",  # flake8-pie
+    "RUF",  # ruff itself
+    "S",  # flake8-bandit
+    "W",  # pycodestyle
 ]
+
 
 [tool.ruff.lint.isort]
 combine-as-imports = true
