--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,13 @@ exclude = '''
 )
 '''
 
+[tool.ruff.lint]
+
+ignore = [
+    "E501",  # pycodestyle: line-too-long
+    "PIE808",  # unnecessary-range-start
+    "RUF012",  # mutable-class-default - see https://github.com/astral-sh/ruff/issues/5243
+]
 
 [tool.ruff.lint.isort]
 combine-as-imports = true
