--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,9 +100,9 @@ exclude = '''
 [tool.ruff.lint]
 
 ignore = [
-    "E501",  # pycodestyle: line-too-long
-    "PIE808",  # unnecessary-range-start
-    "RUF012",  # mutable-class-default - see https://github.com/astral-sh/ruff/issues/5243
+    "E501",
+    "PIE808",
+    "RUF012",
 ]
 
 [tool.ruff.lint.isort]
