--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,7 +105,12 @@ select = [
     "PIE",  # flake8-pie
     "RUF",  # ruff itself
     "S",  # flake8-bandit
-    "W",  # pycodestyle1
+    "W",
+]
+ignore = [
+    "E501",  # pycodestyle: line-too-long
+    "PIE808",  # unnecessary-range-start
+    "RUF012",
 ]
 
 [tool.ruff.lint.isort]
