--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,7 +105,7 @@ select = [
     "PIE",  # flake8-pie
     "RUF",  # ruff itself
     "S",  # flake8-bandit
-    "W",
+    "W",  # one
 ]
 ignore = [
     "E501",  # pycodestyle: line-too-long
